[gd_scene load_steps=38 format=3 uid="uid://d317g3stss0nr"]

[ext_resource type="Texture2D" uid="uid://b0sy3hpsltol2" path="res://art/characters/test_player/idle.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://bix0nw446urs" path="res://scripts/player/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://dnw5ovvphr1hl" path="res://art/characters/test_player/fall.png" id="2_p47bc"]
[ext_resource type="Texture2D" uid="uid://bpaf8rxehsh8q" path="res://art/characters/test_player/jump.png" id="4_75vfm"]
[ext_resource type="Texture2D" uid="uid://t24f77c5c2e7" path="res://art/characters/test_player/run.png" id="5_0owmy"]
[ext_resource type="Script" uid="uid://mu8qm0x22edq" path="res://scripts/player/state_machine.gd" id="6_75vfm"]
[ext_resource type="Script" uid="uid://d10rsxk2hqh0l" path="res://scripts/player/states/fall.gd" id="7_0owmy"]
[ext_resource type="Script" uid="uid://to085l6qu1w6" path="res://scripts/player/states/idle.gd" id="7_qek5x"]
[ext_resource type="Script" uid="uid://bofkum30nmdtu" path="res://scripts/player/states/run.gd" id="8_5gtgg"]
[ext_resource type="Script" uid="uid://b78yeb5ae4im" path="res://scripts/player/states/jump.gd" id="9_h17s1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("2_p47bc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dovo2"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmlin"]
atlas = ExtResource("1_8afob")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvxji"]
atlas = ExtResource("1_8afob")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47bc"]
atlas = ExtResource("1_8afob")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("1_8afob")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0owmy"]
atlas = ExtResource("1_8afob")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("1_8afob")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("1_8afob")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("1_8afob")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("1_8afob")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("1_8afob")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("4_75vfm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("5_0owmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("5_0owmy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("5_0owmy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("5_0owmy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("5_0owmy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("5_0owmy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("5_0owmy")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("5_0owmy")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("5_0owmy")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("5_0owmy")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("5_0owmy")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("5_0owmy")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gx1jg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}],
"loop": true,
"name": &"fall",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dovo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmlin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvxji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0owmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ugbui"]
height = 24.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
texture_filter = 1
script = ExtResource("1_dovo2")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gx1jg")
animation = &"idle"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_ugbui")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_75vfm")
initial_state = NodePath("PlayerStateIdle")

[node name="PlayerStateIdle" type="Node" parent="StateMachine"]
script = ExtResource("7_qek5x")

[node name="PlayerStateRun" type="Node" parent="StateMachine"]
script = ExtResource("8_5gtgg")

[node name="PlayerStateJump" type="Node" parent="StateMachine"]
script = ExtResource("9_h17s1")

[node name="PlayerStateFall" type="Node" parent="StateMachine"]
script = ExtResource("7_0owmy")
